Use MD5 instead of crc32 to avoid suspiciony

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="js/jquery.canvasjs.min.js"></script>
   <script type="text/javascript" src="js/Chart.js"></script>
   <script type="text/javascript" src="js/seedrandom.js"></script>
-  <script type="text/javascript" src="js/crc32.js"></script>
+  <script type="text/javascript" src="js/md5.js"></script>
   <script type="text/javascript" src="js/tile.js"></script>
   <script type="text/javascript" src="js/tile.js"></script>
   <script type="text/javascript" src="js/board.js"></script>
