Updated filelist for sound effects. See Drive for .tgz containing the actual mp3s

--- a/www/index.html
+++ b/www/index.html
@@ -41,10 +41,10 @@
     <div id="chartContainer" style="height: 230px; width: 100%; float: left; background-color: white"><canvas id="myChart" width="400" height="200"></canvas></div>
   </div>
   <div id="statsdiv">
-      <table id="stats" class="stats" cellspacing="0" width="100%">
+      <!-- WORK IN PROGRESS...table id="stats" class="stats" cellspacing="0" width="100%">
           <thead><tr><th>Player</th><th>Start throw</th><th>Round 0</th></tr></thead>
           <tr><td>Player 0</td><td>11</td><td>0</td></tr>
-      </table>
+      </table-->
   </div>
   <div id="tail">
     <div>Logging started.</div>
