--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <title>Kolonisten van FS</title>
+  <title>Catan High Nicety Edition</title>
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
@@ -24,21 +24,20 @@
     <script type="text/javascript" src="js/scoretable.js"></script>
  </head>
  <body>
-  <h1>Kolonisten van FS</h1>
   <div id="leftcol">
-    <div id="dicewrap">
+	<img src="img/menu.png" alt="-" id="menu" style="height:40px; width: 40px; padding: 10px;"/>
+	<h1>CATAN</h1>
+	<h2>- High Nicety Edition -</h2>
+    <div id="dicewrap" style="margin-left: 5%; margin-top: 30px;">
      <div id="dice0"></div>
      <div id="dice1"></div>
     </div>
-    <br />
-    <div id="total">Press the button once to begin!</div>
-    <br />
     <div id="nextturn"></div>
     <div id="svgboard">&nbsp;</div>
     <div id="opennew">New Game!</div>
   </div>
   <div id="rightcol">
-    <div id="chartContainer" style="height: 230px; width: 100%; float: left; background-color: white"><canvas id="myChart" width="400" height="200"></canvas></div>
+    <div id="chartContainer" style="height: 75%; width: 100%; float: left; background-color: white"><canvas id="myChart" width="400" height="200"></canvas></div>
   </div>
   <div id="config" style="width: 100%; float: left">
     
@@ -66,42 +65,52 @@
 
       <!-- Modal content -->
       <div class="newgame-content">
-        <h2>New game</h2>
-        <p>
-        <input type="radio" name="gametype" value="fixed" id="fixedbtn" checked /><label for="fixedbtn">Fixed (Easy)</label><br>
-        <input type="radio" name="gametype" value="ordered" id="orderedbtn" /><label for="orderedbtn">Ordered (Meh)</label><br>
-        <input type="radio" name="gametype" value="random"  id="randombtn" /><label for="randombtn">Random (Hard)</label>
-        </p>
-        <p>
-        <label for="players">Number of players</label>
-        <input type="text" name="nrplayers" id="nrplayers" value="3" />
-        <img src="img/decrement.png" alt="-" id="decrementplayers" />
-        <img src="img/increment.png" alt="+" id="incrementplayers" />
-        </p>
-        <h3>Player names:</h3>
-        <p>
-        <input type="text" name="player0" id="player0" value="Player 0" /> <br />
-        <input type="text" name="player1" id="player1" value="Player 1" /> <br />
-        <input type="text" name="player2" id="player2" value="Player 2" /> <br />
-        <input type="text" name="player3" id="player3" value="Player 3" />
-        </p>
-        <h3>Random Seed</h3>
-        <p>Use this input to be able to re-create the board later on. <br />
-        Leave empty to use the current time as seed.</p>
-        <label for="boardseed">Random seed: </label>
-        <input type="text" name="boardseed" id="boardseed" value="" /> <br />
-        <input type="submit" id="startgame" value="Start!">
-        <div style="float:right"><input type="submit" id="closenew" value="Close"></div>
-        </div>
+		<div style="width: 100%;">
+			<h1 style="float:left; width: 70%; font-size: 200%; margin-top: 5px; margin-bottom: 10px; text-align:left;">New game</h1>
+			<input type="submit" id="closenew"  value="Close" style="float:right;">
+			<input type="submit" id="startgame" value="Start" style="float:right;">
+		</div>
+		<div>
+		<div id="left-start-col">
+			<h3>Game Set-up</h3>
+			<p>
+			<input type="radio" name="gametype" value="fixed" id="fixedbtn" checked /><label for="fixedbtn">Fixed (Easy)</label><br>
+			<input type="radio" name="gametype" value="ordered" id="orderedbtn" /><label for="orderedbtn">Ordered (Meh)</label><br>
+			<input type="radio" name="gametype" value="random"  id="randombtn" /><label for="randombtn">Random (Hard)</label>
+			</p><br>
+			<h3>Random Seed</h3>
+			<p>Use this input to be able to re-create the board later on. Leave empty to use the current time as seed.</p>
+			<label for="boardseed">Random seed </label>
+			<input type="text" name="boardseed" id="boardseed" value="" /><br><br>
+		</div>
+		<div id="right-start-col">
+			<h3>Player Count</h3>
+			<img src="img/decrement.png" alt="-" id="decrementplayers" />
+			<img src="img/increment.png" alt="+" id="incrementplayers" />
+			<p>
+			<label for="players" style="vertical-align: center; display: none;">Number of players </label>
+			<input type="text" name="nrplayers" id="nrplayers" value="3" style="width: 20%; vertical-align: center; display: none;" />
+
+			</p><br>
+			<h3>Player Names</h3>
+			<p>
+			<input type="text" name="player0" id="player0" value="Thijs" style="margin-bottom: 5px;"/><br />
+			<input type="text" name="player1" id="player1" value="Player 1" style="margin-bottom: 5px;"/><br />
+			<input type="text" name="player2" id="player2" value="Player 2" style="margin-bottom: 5px;"/><br />
+			<input type="text" name="player3" id="player3" value="Player 3" />
+			</p>
+		</div>
+		</div>
+	</div>
   </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-      <script type="text/javascript">
-          game = new catan_game(gui, app.sendData);
-          app.initialize();
-          app.registerUpdate(game.update_btle);
-          app.registerButtonDown(game.button_down);
-          app.registerButtonUp(game.button_up);
-      </script>
+		<script type="text/javascript">
+			game = new catan_game(gui, app.sendData);
+			app.initialize();
+			app.registerUpdate(game.update_btle);
+			app.registerButtonDown(game.button_down);
+			app.registerButtonUp(game.button_up);
+		</script>
  </body>
 </html>
