Add demo modes and external highlighting of tiles

--- a/www/index.html
+++ b/www/index.html
@@ -51,9 +51,16 @@
 			<input type="submit" id="closeset"  value="Close" style="float:right;">
 		</div>
 		<div id="config" style="width: 100%; float: left">
-
+            <div id="specialmodes" style="float: right; width: 30%; margin-top: 30pt">
+                <div style="height: 30pt"><input type="submit" id="mode0" value="Special 0" style="float:right;"> </div>
+                <div style="height: 30pt"><input type="submit" id="mode1" value="Special 1" style="float:right;"> </div>
+                <div style="height: 30pt"><input type="submit" id="mode2" value="Special 2" style="float:right;"> </div>
+                <div style="height: 30pt"><input type="submit" id="mode3" value="Special 3" style="float:right;"> </div>
+                <div style="height: 30pt"><input type="submit" id="mode4" value="Special 4" style="float:right;"> </div>
+            </div>
 			<h3>Brightness</h3> 
 			<input type="range" id="brightness" min="0" max="255" step="1" value="255" />    		
+		
 			
 			<h3>Power</h3>
 			<input type="button" id="onbutton" value="On!" />
@@ -66,12 +73,7 @@
 			<div id="state_connected">Disconnected...</div>
 		</div>
 		
-		<div id="statsdiv">
-			<!-- WORK IN PROGRESS...table id="stats" class="stats" cellspacing="0" width="100%">
-			<thead><tr><th>Player</th><th>Start throw</th><th>Round 0</th></tr></thead>
-			<tr><td>Player 0</td><td>11</td><td>0</td></tr>
-			</table-->
-		</div>
+        
 	  </div>
 	</div>
   
