Should show the debug window again
Used for debugging the not working iOS bit.

--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
     <div id="chartContainer" style="height: 75%; width: 100%; float: left; background-color: white"><canvas id="myChart" width="400" height="200"></canvas></div>
   </div>
   
-  <div id="tail" style="display: none;">
+  <div id="tail">
     <div>Logging started.</div>
   </div>
   
